--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
   },
   "dependencies": {
     "@artifact/lpg-api-service": "^3.1.1",
+    "@aws-sdk/client-dynamodb": "^3.893.0",
+    "@aws-sdk/lib-dynamodb": "^3.893.0",
     "@nestjs/common": "^11.0.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@redis/search": "^5.8.2",
+    "axios": "^1.12.2",
+    "md5": "^2.3.0",
     "pg": "^8.16.3",
+    "redis": "^5.8.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.27"
