--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@artifact/aurora-api-core": "^1.4.5",
     "@artifact/lpg-api-service": "^3.1.1",
     "@aws-sdk/client-dynamodb": "^3.893.0",
     "@aws-sdk/lib-dynamodb": "^3.893.0",
@@ -31,14 +32,17 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
-    "@redis/search": "^5.8.2",
+    "@redis/search": "^1.1.6",
     "axios": "^1.12.2",
+    "crypto-js": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "pg": "^8.16.3",
-    "redis": "^5.8.2",
+    "redis": "^4.6.13",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.27",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -50,6 +54,7 @@
     "@swc/core": "^1.10.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "ajv": "^8.17.1",
