--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "deploy": "cross-env NODE_ENV=production sls deploy --stage prod"
   },
   "engines": {
     "npm": ">=10.0.0",
@@ -33,6 +34,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@redis/search": "^1.1.6",
+    "@vendia/serverless-express": "^4.12.6",
     "axios": "^1.12.2",
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -52,6 +54,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.8",
+    "@types/aws-lambda": "^8.10.152",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
@@ -59,12 +62,16 @@
     "@types/supertest": "^6.0.2",
     "ajv": "^8.17.1",
     "ajv-formats": "^2.1.1",
+    "cross-env": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "serverless": "^3.40.0",
+    "serverless-esbuild": "^1.55.1",
+    "serverless-offline": "^14.4.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
