chore: update database password in serverless configuration

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@ provider:
     DATABASE_HOST: 143.198.193.124
     DATABASE_PORT: 5432
     DATABASE_USERNAME: "jay"
-    DATABASE_PASSWORD: "ynxtXe2x7w2HZX6mpJyR"
+    DATABASE_PASSWORD: "jk3oxf1e99BvY2Ns8v825eU9o34B4BD5LX"
     DATABASE_NAME: "jay_dev"
 
 
