--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@redis/search": "^1.1.6",
     "@vendia/serverless-express": "^4.12.6",
@@ -43,6 +44,7 @@
     "redis": "^4.6.13",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.27",
     "ws": "^8.18.3"
   },
