feat: integrate AWS S3 service for file management; add S3 configuration, service, and controller for file upload, download, and presigned URL generation; update package dependencies and documentation

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@artifact/aurora-api-core": "^1.4.5",
     "@artifact/lpg-api-service": "^3.1.1",
     "@aws-sdk/client-dynamodb": "^3.893.0",
+    "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.893.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@nestjs/common": "^11.0.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -60,6 +62,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "ajv": "^8.17.1",
