--- a/serverless.yml
+++ b/serverless.yml
@@ -14,10 +14,19 @@ provider:
     DATABASE_PASSWORD: "jk3oxf1e99BvY2Ns8v825eU9o34B4BD5LX"
     DATABASE_NAME: "jay_dev"
     # S3 Configuration
-    AWS_REGION: ap-northeast-1
-    AWS_ACCESS_KEY_ID: ${env:AWS_ACCESS_KEY_ID}
-    AWS_SECRET_ACCESS_KEY: ${env:AWS_SECRET_ACCESS_KEY}
     S3_BUCKET_NAME: sls-artifact-template-nestjs-dev-files
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - s3:GetObject
+            - s3:PutObject
+            - s3:DeleteObject
+            - s3:ListBucket
+          Resource:
+            - arn:aws:s3:::sls-artifact-template-nestjs-dev-files
+            - arn:aws:s3:::sls-artifact-template-nestjs-dev-files/*
 
 plugins:
   - serverless-esbuild
