--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,15 @@ provider:
   runtime: nodejs20.x
   region: ap-northeast-1
   architecture: arm64
+  httpApi:
+    binaryMediaTypes:
+      - application/octet-stream
+      - image/*
+      - application/pdf
+      - application/zip
+      - application/x-zip-compressed
+      - video/*
+      - audio/* 
   environment:
     NODE_OPTIONS: --enable-source-maps
     DATABASE_HOST: 143.198.193.124
