--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.893.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@line/bot-sdk": "^10.3.0",
     "@nestjs/common": "^11.0.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
